// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot, state derived from props, DISCONNECTED 1`] = `
.c19 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c18 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c20 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c20 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c20:focus,
.c20:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c6 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  min-height: 2rem;
  max-height: 3.7rem;
  min-width: 125px;
  padding: 0.7rem 1.5rem;
  margin-bottom: 2px;
  cursor: initial;
  pointer-events: none;
}

.c9 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c10 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c12 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c7 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.3;
}

.c8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c16 {
  text-align: center;
  color: #f94c4c;
  visibility: visible;
}

.c15 {
  font-size: 11px;
  opacity: 0.59;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c4 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .c22 {
  opacity: 0.75;
}

.c0:hover .c23 {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c21 .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
>
  <div
    className="c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c5"
      >
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={true}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                SELL
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c13"
        >
          <i
            aria-hidden="true"
            className="c14 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c15"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c16 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={true}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                BUY
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c17"
      >
        <div
          className="c18"
        >
          <span
            className="c19"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c20"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ canRequest 1`] = `
.c22 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c21 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c23 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c23 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c23:focus,
.c23:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c6 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  min-height: 2rem;
  max-height: 3.7rem;
  min-width: 125px;
  padding: 0.7rem 1.5rem;
  margin-bottom: 2px;
  cursor: initial;
  pointer-events: none;
}

.c9 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c10 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c12 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c7 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.3;
}

.c8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c16 {
  text-align: center;
  color: #f94c4c;
  visibility: hidden;
}

.c15 {
  font-size: 11px;
  opacity: 0.59;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c17 {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  text-align: center;
  z-index: 2;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
  padding-bottom: 8px;
  padding-top: 5px;
  position: absolute;
  border-radius: 3px;
  background: #5f94f5;
  pointer-events: auto;
  width: 58px;
  cursor: pointer;
}

.c18 rect {
  fill: #ffffff;
}

.c19 {
  color: #ffffff;
  font-size: 0.77rem;
}

.c4 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .c25 {
  opacity: 0.75;
}

.c0:hover .c26 {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c24 .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:321px) {
  .c18 {
    width: 60px;
  }
}

@media (min-width:401px) {
  .c18 {
    width: 64px;
    padding-left: 1px;
    padding-right: 1px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c5"
      >
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={true}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                SELL
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c13"
        >
          <i
            aria-hidden="true"
            className="c14 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c15"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c16 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="c17"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="c18"
            color="blue"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c19"
              data-qa="tile-booking__booking-status"
            >
              Initiate RFQ
            </span>
          </div>
        </div>
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={true}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                BUY
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c20"
      >
        <div
          className="c21"
        >
          <span
            className="c22"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c23"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ expired 1`] = `
.c23 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c22 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c24 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c24 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c24:focus,
.c24:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c6 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  min-height: 2rem;
  max-height: 3.7rem;
  min-width: 125px;
  padding: 0.7rem 1.5rem;
  margin-bottom: 2px;
  cursor: initial;
  pointer-events: none;
}

.c9 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c10 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c12 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c7 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.3;
}

.c8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 {
  color: #f94c4c;
  font-size: 9px;
  text-transform: uppercase;
}

.c15 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c17 {
  text-align: center;
  color: #f94c4c;
  visibility: hidden;
}

.c16 {
  font-size: 11px;
  opacity: 0.59;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c18 {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  text-align: center;
  z-index: 2;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
  padding-bottom: 8px;
  padding-top: 5px;
  position: absolute;
  border-radius: 3px;
  background: #5f94f5;
  pointer-events: auto;
  width: 58px;
  cursor: pointer;
}

.c19 rect {
  fill: #ffffff;
}

.c20 {
  color: #ffffff;
  font-size: 0.77rem;
}

.c4 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .c26 {
  opacity: 0.75;
}

.c0:hover .c27 {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c25 .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:321px) {
  .c19 {
    width: 60px;
  }
}

@media (min-width:401px) {
  .c19 {
    width: 64px;
    padding-left: 1px;
    padding-right: 1px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c5"
      >
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={true}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                SELL
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
          <div
            className="c13"
            data-qa="price-button__expired"
          >
            Expired
          </div>
        </button>
        <div
          className="c14"
        >
          <i
            aria-hidden="true"
            className="c15 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c16"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c17 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="c18"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="c19"
            color="blue"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c20"
              data-qa="tile-booking__booking-status"
            >
              Requote
            </span>
          </div>
        </div>
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={true}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                BUY
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
          <div
            className="c13"
            data-qa="price-button__expired"
          >
            Expired
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c21"
      >
        <div
          className="c22"
        >
          <span
            className="c23"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c24"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ received 1`] = `
.c20 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c19 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c21 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c21 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c21:focus,
.c21:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c6 {
  background-color: #2e3543;
  border-radius: 3px;
  color: #f94c4c;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  min-height: 2rem;
  max-height: 3.7rem;
  min-width: 125px;
  padding: 0.7rem 1.5rem;
  margin-bottom: 2px;
  -webkit-animation: hlRYgF 5s;
  animation: hlRYgF 5s;
}

.spot-tile:hover .c6 {
  background-color: #272d3a;
}

.spot-tile:hover .c6:hover {
  background-color: #f94c4c;
  color: #ffffff;
}

.c17 {
  background-color: #2e3543;
  border-radius: 3px;
  color: #5f94f5;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  min-height: 2rem;
  max-height: 3.7rem;
  min-width: 125px;
  padding: 0.7rem 1.5rem;
  margin-bottom: 2px;
  -webkit-animation: ceeoSx 5s;
  animation: ceeoSx 5s;
}

.spot-tile:hover .c17 {
  background-color: #272d3a;
}

.spot-tile:hover .c17:hover {
  background-color: #5f94f5;
  color: #ffffff;
}

.c9 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c10 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c12 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c7 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c16 {
  text-align: center;
  color: #f94c4c;
  visibility: hidden;
}

.c15 {
  font-size: 11px;
  opacity: 0.59;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c4 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .c23 {
  opacity: 0.75;
}

.c0:hover .c24 {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c22 .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
>
  <div
    className="c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c5"
      >
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                SELL
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c13"
        >
          <i
            aria-hidden="true"
            className="c14 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c15"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c16 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="c17"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                BUY
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          <span
            className="c20"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c21"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ requested 1`] = `
.c21 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c20 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c22 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c22 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c22:focus,
.c22:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c13 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c15 {
  text-align: center;
  color: #f94c4c;
  visibility: hidden;
}

.c14 {
  font-size: 11px;
  opacity: 0.59;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c8 {
  -webkit-animation: kSREiV 0.8s infinite;
  animation: kSREiV 0.8s infinite;
  -webkit-animation-delay: -0.48s;
  animation-delay: -0.48s;
  fill: #fff;
  will-change: transform;
}

.c9 {
  -webkit-animation: kSREiV 0.8s infinite;
  animation: kSREiV 0.8s infinite;
  -webkit-animation-delay: -0.3261538461538461s;
  animation-delay: -0.3261538461538461s;
  fill: #fff;
  will-change: transform;
}

.c10 {
  -webkit-animation: kSREiV 0.8s infinite;
  animation: kSREiV 0.8s infinite;
  -webkit-animation-delay: -0.17230769230769227s;
  animation-delay: -0.17230769230769227s;
  fill: #fff;
  will-change: transform;
}

.c11 {
  -webkit-animation: kSREiV 0.8s infinite;
  animation: kSREiV 0.8s infinite;
  -webkit-animation-delay: -0.018461538461538418s;
  animation-delay: -0.018461538461538418s;
  fill: #fff;
  will-change: transform;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  border: 2px solid #272d3a;
  border-radius: 3px;
  font-size: 10px;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  height: 58px;
  min-height: 2rem;
  max-height: 3.7rem;
  margin-bottom: 1px;
  min-width: 125px;
  line-height: normal;
  opacity: 0.5;
  text-align: center;
  text-transform: uppercase;
}

.c7 {
  margin: -5px 0 3px;
}

.c16 {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  text-align: center;
  z-index: 2;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
  padding-bottom: 8px;
  padding-top: 5px;
  position: absolute;
  border-radius: 3px;
  background: #f94c4c;
  pointer-events: auto;
  width: 58px;
  cursor: pointer;
}

.c17 rect {
  fill: #ffffff;
}

.c18 {
  color: #ffffff;
  font-size: 0.77rem;
}

.c4 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .c24 {
  opacity: 0.75;
}

.c0:hover .c25 {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c23 .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:321px) {
  .c17 {
    width: 60px;
  }
}

@media (min-width:401px) {
  .c17 {
    width: 64px;
    padding-left: 1px;
    padding-right: 1px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className="c6"
          data-qa="price-controls__price-button-disabled--loading"
        >
          <div
            className="c7"
          >
            <svg
              data-qa="adaptive-loader__svg"
              height={14}
              width={14}
            >
              <rect
                className="c8"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="c9"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="c10"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="c11"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
        <div
          className="c12"
        >
          <i
            aria-hidden="true"
            className="c13 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c14"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c15 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="c16"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="c17"
            color="red"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c18"
              data-qa="tile-booking__booking-status"
            >
              Cancel RFQ
            </span>
          </div>
        </div>
        <div
          className="c6"
          data-qa="price-controls__price-button-disabled--loading"
        >
          <div
            className="c7"
          >
            <svg
              data-qa="adaptive-loader__svg"
              height={14}
              width={14}
            >
              <rect
                className="c8"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="c9"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="c10"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="c11"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c19"
      >
        <div
          className="c20"
        >
          <span
            className="c21"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c22"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, defaults, RFQ none, should be able to excute 1`] = `
.c20 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c19 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c21 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c21 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c21:focus,
.c21:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c6 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  min-height: 2rem;
  max-height: 3.7rem;
  min-width: 125px;
  padding: 0.7rem 1.5rem;
  margin-bottom: 2px;
}

.spot-tile:hover .c6 {
  background-color: #272d3a;
}

.spot-tile:hover .c6:hover {
  background-color: #f94c4c;
  color: #ffffff;
}

.c17 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  min-height: 2rem;
  max-height: 3.7rem;
  min-width: 125px;
  padding: 0.7rem 1.5rem;
  margin-bottom: 2px;
}

.spot-tile:hover .c17 {
  background-color: #272d3a;
}

.spot-tile:hover .c17:hover {
  background-color: #5f94f5;
  color: #ffffff;
}

.c9 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c10 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c12 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c7 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c16 {
  text-align: center;
  color: #f94c4c;
  visibility: visible;
}

.c15 {
  font-size: 11px;
  opacity: 0.59;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c4 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .c23 {
  opacity: 0.75;
}

.c0:hover .c24 {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c22 .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
>
  <div
    className="c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c5"
      >
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                SELL
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c13"
        >
          <i
            aria-hidden="true"
            className="c14 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c15"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c16 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="c17"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={false}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                BUY
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          <span
            className="c20"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c21"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, in trade 1`] = `
.c27 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c26 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c28 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c28 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c28:focus,
.c28:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c6 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  min-height: 2rem;
  max-height: 3.7rem;
  min-width: 125px;
  padding: 0.7rem 1.5rem;
  margin-bottom: 2px;
  cursor: initial;
  pointer-events: none;
}

.c9 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c10 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c12 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c7 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.3;
}

.c8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c16 {
  text-align: center;
  color: #f94c4c;
  visibility: hidden;
}

.c15 {
  font-size: 11px;
  opacity: 0.59;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c20 {
  -webkit-animation: kSREiV 0.8s infinite;
  animation: kSREiV 0.8s infinite;
  -webkit-animation-delay: -0.48s;
  animation-delay: -0.48s;
  fill: #fff;
  will-change: transform;
}

.c21 {
  -webkit-animation: kSREiV 0.8s infinite;
  animation: kSREiV 0.8s infinite;
  -webkit-animation-delay: -0.3261538461538461s;
  animation-delay: -0.3261538461538461s;
  fill: #fff;
  will-change: transform;
}

.c22 {
  -webkit-animation: kSREiV 0.8s infinite;
  animation: kSREiV 0.8s infinite;
  -webkit-animation-delay: -0.17230769230769227s;
  animation-delay: -0.17230769230769227s;
  fill: #fff;
  will-change: transform;
}

.c23 {
  -webkit-animation: kSREiV 0.8s infinite;
  animation: kSREiV 0.8s infinite;
  -webkit-animation-delay: -0.018461538461538418s;
  animation-delay: -0.018461538461538418s;
  fill: #fff;
  will-change: transform;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c17 {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  text-align: center;
  z-index: 2;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
  padding-bottom: 10px;
  padding-top: 10px;
  position: absolute;
  border-radius: 17px;
  background: #5f94f5;
  pointer-events: auto;
  width: 125px;
  cursor: pointer;
}

.c18 rect {
  fill: #ffffff;
}

.c24 {
  color: #ffffff;
  font-size: 0.8125rem;
}

.c19 {
  padding-right: 0.375rem;
  padding-top: 0.04rem;
}

.c4 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .c30 {
  opacity: 0.75;
}

.c0:hover .c31 {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c29 .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:321px) {
  .c18 {
    width: 125px;
  }
}

@media (min-width:401px) {
  .c18 {
    width: 125px;
    padding-left: 1px;
    padding-right: 1px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c5"
      >
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={true}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                SELL
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c13"
        >
          <i
            aria-hidden="true"
            className="c14 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c15"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c16 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="c17"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="c18"
            color="blue"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c19"
            >
              <svg
                data-qa="adaptive-loader__svg"
                height={14}
                width={14}
              >
                <rect
                  className="c20"
                  height={10.5}
                  order={0}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={0.25}
                />
                <rect
                  className="c21"
                  height={10.5}
                  order={1}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={3.875}
                />
                <rect
                  className="c22"
                  height={10.5}
                  order={2}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={7.5}
                />
                <rect
                  className="c23"
                  height={10.5}
                  order={3}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={11.125}
                />
              </svg>
            </span>
            <span
              className="c24"
              data-qa="tile-booking__booking-status"
            >
              Executing
            </span>
          </div>
        </div>
        <button
          className="c6"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c7"
            disabled={true}
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                BUY
              </div>
              <div
                className="c10"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="c11"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="c12"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c25"
      >
        <div
          className="c26"
        >
          <span
            className="c27"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c28"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
